update UserCardPercentageService